substrate/frame/support/test/tests/derive_impl_ui/inject_runtime_type_invalid.stderr
error: `#[inject_runtime_type]` can only be attached to `RuntimeCall`, `RuntimeEvent`, `RuntimeTask`, `RuntimeOrigin` or `PalletInfo`
  --> tests/derive_impl_ui/inject_runtime_type_invalid.rs:32:5
   |
32 |     type RuntimeInfo = ();
   |     ^^^^^^^^^^^^^^^^^^^^^^

error[E0046]: not all trait items implemented, missing: `RuntimeInfo`
  --> tests/derive_impl_ui/inject_runtime_type_invalid.rs:30:1
   |
22 |     type RuntimeInfo;
   |     ---------------- `RuntimeInfo` from trait
...
30 | impl Config for Pallet {
   | ^^^^^^^^^^^^^^^^^^^^^^ missing `RuntimeInfo` in implementation
